# kicad-rw

./: .gitattributes  .gitignore  CONTRIBUTORS.md  LINKS.md  MANIFEST.in  README.html  README.md  README.rst  README.txt  invoke.yaml  kicad-file-formats.md  setup.cfg  setup.py  setup_data.py
.github/workflows/: codeql-analysis.yml
KiCadRW/: Objectifier.py  Schema.py  Sexpression.py  __init__.py  geometry.py  objectifier.py  schema.py
KiCadRW/Config/: ConfigInstall.py
KiCadRW/Deprecated/: Sexpression.py
KiCadRW/Logging/: __init__.py
KiCadRW/Tools/: Path.py
KiCadRW/config/: ConfigInstall.py  logging.yml
KiCadRW/deprecated/: sexpression.py
KiCadRW/drawings/: CircuitMacros.py
KiCadRW/log/: __init__.py
KiCadRW/sexp/: SexpSymbols.py  __init__.py  objectifier.py  patch.py  schema.py  symbol.py  symbols.py
KiCadRW/tools/: path.py
doc/notes/: LINKS.md  kicad-file-formats.md
doc/sphinx/source/: abbreviation.txt  bibliography.rst  conf.py  faq.rst  news.txt  project-links.txt  reference-manual.rst  related-projects.rst  roadmap.rst
examples/: draft-circuit-macros.py  dump-schematic.py  test-objectifier.py  test-rewrite.py
examples/avr_da_db/: README.md  avr128db-io-mux.csv  avr32da-io-mux.csv  avr_da_db_generator.py  rework-library-module.py  rework-sexp.py  rework.py  test-sexp.py
examples/avr_da_db/data/: avr128da-io-mux.csv  (+3 more)
gh-pages/: README.rst  update-gh-pages
kicad-examples/capacitive-half-wave-rectification-pre-zener/: capacitive-half-wave-rectification-pre-zener.kicad_sch  capacitive-half-wave-rectification-pre-zener.unordered.kicad_sch
kicad-examples/electrolab-cta-control-board/: 4_20m_in.kicad_sch  Airflow_inputs.kicad_sch  Analog_inputs.kicad_sch  CAN.kicad_sch  CTA_control_board.kicad_dru  CTA_control_board.kicad_prl  CTA_control_board.kicad_pro  CTA_control_board.kicad_sch  CTA_symbols.kicad_sym  Digital_inputs.kicad_sch  Digital_outputs.kicad_sch  IN_PU_PD.kicad_sch  MCU.kicad_sch  Outputs_0_10V.kicad_sch  PSU.kicad_sch  Pressure_inputs.kicad_sch  README.md  RS485.kicad_sch  Relays.kicad_sch  Sensor_supply.kicad_sch  Temperature_inputs.kicad_sch  analog_mux.kicad_sch  i2c.kicad_sch  in_opto.kicad_sch  out_high_side.kicad_sch  out_low_side.kicad_sch  pressure_sensor.kicad_sch  pt100.kicad_sch  relay.kicad_sch  thermocouple.kicad_sch
kicad-examples/open-syringe-pump/: README.md
kicad-examples/symbols/: Infineon_IGBT_Driver.kicad_sym  MCU_Microchip_AVR128.kicad_sym  demo.kicad_sym
tasks/: __init__.py  anaconda.py  clean.py  doc.py  git.py  github.py  release.py
(+7 files in other folders)
