# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = KiCadRW
version = attr: KiCadRW.__version__
url = https://github.com/FabriceSalvaire/kicad-rw
# download_url =
project_urls =
    # Documentation = https://kicad-rw.fabrice-salvaire.fr
    Code = https://github.com/FabriceSalvaire/kicad-rw
    Issue Tracker = https://github.com/FabriceSalvaire/kicad-rw/issues
    # Forum = https://kicad-rw.discourse.group
license = GPLv3
# license_file =
license_files = LICENSE.txt
author = Fabrice Salvaire
author_email = kicad-rw@fabrice-salvaire.fr
maintainer = Fabrice Salvaire
maintainer_email = kicad-rw@fabrice-salvaire.fr
description = Python library to read/write KiCad Sexpr file format
# long_description = file: README.rst
# , CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
keywords = kicad, sexpr
classifiers =
    Topic :: Scientific/Engineering
    Intended Audience :: Education
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
platforms = any
# provides =
# requires =
# obsoletes =

[options]
packages = find:
python_requires = >=3.6
setup_require = setuptools
# install_requires should declare the loosest possible dependency versions that are still workable
# https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    PyYAML>=5.3
zip_safe = False
# Look in MANIFEST.in
include_package_data = True

[options.packages.find]
exclude =
    unit-test

# [options.package_data]

# [options.entry_points]
# console_scripts =

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
# https://flake8.pycqa.org/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E226 missing whitespace around arithmetic operator
# E302  expected 2 blank lines
# E303  too many blank lines
# E305 expected 2 blank lines after class or function definition
# E402  module level import not at top of file
ignore = E226, E302, E303, E305, E402

[pylint.message]
# module-naming-style=PascalCase
disable =
  fixme,  # spam ...
  invalid-name,  # for module name not conforming to snake_case
  missing-class-docstring, # spam ...
  missing-function-docstring,
  missing-module-docstring,
  no-else-return  # sometimes it is more readable ...
